# alexandria-api

./: db.sqlite3  docker-compose.yml  main.py  pyproject.toml
api/: models.py  pagination.py  tasks.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_journalentry_created_at_journalentry_updated_at.py
core/: asgi.py  celery.py  settings.py  urls.py
